K8S/someworkerservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: someworkerservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: someworkerservice
  template:
    metadata:
      labels:
        app: someworkerservice
    spec:
      containers:
      - name: someworkerservice
        image: elishevafefer/someworkerservice:latest
        ports:
        - containerPort: 5001
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 5001
          initialDelaySeconds: 20 
          periodSeconds: 10     
          timeoutSeconds: 2       
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 5001
          initialDelaySeconds: 20
          periodSeconds: 10       
          timeoutSeconds: 2       
---
apiVersion: v1
kind: Service
metadata:
  name: someworkerservice
spec:
  selector:
    app: someworkerservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
  type: ClusterIP
