K8S/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /bitcoinservice
        pathType: Prefix
        backend:
          service:
            name: bitcoinservice
            port:
              number: 80
      - path: /someworkerservice
        pathType: Prefix
        backend:
          service:
            name: someworkerservice
            port:
              number: 80
