K8S/networkpolicy-depl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-bitcoin-to-someworker
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: someworkerservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: bitcoinservice
